--- a/django_project/ssluzba/templates/users_page.html
+++ b/django_project/ssluzba/templates/users_page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title></title>
     <meta name="description" content="" />
@@ -14,6 +14,7 @@
       {% csrf_token %} {{form}}
       <input type="submit" />
     </form>
+    <p>{{message}}</p>
     {% for user in users %}
     <p>{{user}}</p>
     <br />
