feat: images work in docker

--- a/django_project/ssluzba/templates/users_page.html
+++ b/django_project/ssluzba/templates/users_page.html
@@ -27,7 +27,7 @@
           <p>{{user}}</p>
         </td>
         <td>
-          <a href="/{{user.image}}">Slika</a>
+          <a href="/uploads/images/{{user.image}}">Slika</a>
         </td>
       </tr>
       {% endfor %}
